trunk/Archive2/b4/33e2d43822dfe3/output
main.cpp: In function 'int main()':
main.cpp:4:20: error: invalid operands of types 'int*' and 'int' to binary 'operator%'
     ((&variable) % 4);
                    ^
