trunk/Archive2/b4/33e2d43822dfe3/main.cpp
int main()
{
    int variable = 0;
    ((&variable) % 4);
}